@@ -10,6 +10,8 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDate;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -36,14 +38,14 @@ class MatchingServiceTest {
         CompetencyDTO rotationCompetency = new CompetencyDTO(1, "Backend entwickeln", "Applikationsentwicklung", "C1", null, 2.0);
         RotationDTO rotationDTO = new RotationDTO(1, "Backend Rotation", "Backend Entwicklung mit Spring Boot", "IT", "Java, Spring Boot", "available", LocalDate.now());
 
-        when(this.apprenticeService.getApprenticeCompetencies(1)).thenReturn(List.of(apprenticeCompetency));
-        when(this.rotationService.getAvailableRotations()).thenReturn(List.of(rotationDTO));
-        when(this.competencyService.getCompetenciesByRotation(1)).thenReturn(List.of(rotationCompetency));
+        when(this.apprenticeService.getApprenticeCompetencies(1)).thenReturn(Arrays.asList(apprenticeCompetency));
+        when(this.rotationService.getAvailableRotations()).thenReturn(Arrays.asList(rotationDTO));
+        when(this.competencyService.getCompetenciesByRotation(1)).thenReturn(Arrays.asList(rotationCompetency));
 
         List<MatchDTO> result = this.matchingService.getMatchingRotationsByApprentice(1);
 
         assertEquals(1, result.size());
-        assertEquals(0.0, result.getFirst().getMatchingScore());
+        assertEquals(0.0, result.get(0).getMatchingScore());
     }
 
     @Test
@@ -52,14 +54,14 @@ class MatchingServiceTest {
         CompetencyDTO rotationCompetency = new CompetencyDTO(1, "Backend entwickeln", "Applikationsentwicklung", "C1", null, 2.0);
         RotationDTO rotationDTO = new RotationDTO(1, "Backend Rotation", "Backend Entwicklung mit Spring Boot", "IT", "Java, Spring Boot", "available", LocalDate.now());
 
-        when(this.apprenticeService.getApprenticeCompetencies(1)).thenReturn(List.of(apprenticeCompetency));
-        when(this.rotationService.getAvailableRotations()).thenReturn(List.of(rotationDTO));
-        when(this.competencyService.getCompetenciesByRotation(1)).thenReturn(List.of(rotationCompetency));
+        when(this.apprenticeService.getApprenticeCompetencies(1)).thenReturn(Arrays.asList(apprenticeCompetency));
+        when(this.rotationService.getAvailableRotations()).thenReturn(Arrays.asList(rotationDTO));
+        when(this.competencyService.getCompetenciesByRotation(1)).thenReturn(Arrays.asList(rotationCompetency));
 
         List<MatchDTO> result = this.matchingService.getMatchingRotationsByApprentice(1);
 
         assertEquals(1, result.size());
-        assertEquals(1.0, result.getFirst().getMatchingScore());
+        assertEquals(1.0, result.get(0).getMatchingScore());
     }
 
     @Test
@@ -68,14 +70,14 @@ class MatchingServiceTest {
         CompetencyDTO rotationCompetency = new CompetencyDTO(1, "Backend entwickeln", "Applikationsentwicklung", "C1", null, 2.0);
         RotationDTO rotationDTO = new RotationDTO(1, "Backend Rotation", "Backend Entwicklung mit Spring Boot", "IT", "Java, Spring Boot", "available", LocalDate.now());
 
-        when(this.apprenticeService.getApprenticeCompetencies(1)).thenReturn(List.of(apprenticeCompetency));
-        when(this.rotationService.getAvailableRotations()).thenReturn(List.of(rotationDTO));
-        when(this.competencyService.getCompetenciesByRotation(1)).thenReturn(List.of(rotationCompetency));
+        when(this.apprenticeService.getApprenticeCompetencies(1)).thenReturn(Arrays.asList(apprenticeCompetency));
+        when(this.rotationService.getAvailableRotations()).thenReturn(Arrays.asList(rotationDTO));
+        when(this.competencyService.getCompetenciesByRotation(1)).thenReturn(Arrays.asList(rotationCompetency));
 
         List<MatchDTO> result = this.matchingService.getMatchingRotationsByApprentice(1);
 
         assertEquals(1, result.size());
-        assertEquals(2.0, result.getFirst().getMatchingScore());
+        assertEquals(2.0, result.get(0).getMatchingScore());
     }
 
     @Test
@@ -83,14 +85,14 @@ class MatchingServiceTest {
         CompetencyDTO rotationCompetency = new CompetencyDTO(2, "Datenbanken verwenden", "Applikationsentwicklung", "C2", null, 3.0);
         RotationDTO rotationDTO = new RotationDTO(1, "Database Rotation", "Arbeit mit MariaDB", "IT", "MariaDB", "available", LocalDate.now());
 
-        when(this.apprenticeService.getApprenticeCompetencies(1)).thenReturn(List.of());
-        when(this.rotationService.getAvailableRotations()).thenReturn(List.of(rotationDTO));
-        when(this.competencyService.getCompetenciesByRotation(1)).thenReturn(List.of(rotationCompetency));
+        when(this.apprenticeService.getApprenticeCompetencies(1)).thenReturn(Collections.emptyList());
+        when(this.rotationService.getAvailableRotations()).thenReturn(Arrays.asList(rotationDTO));
+        when(this.competencyService.getCompetenciesByRotation(1)).thenReturn(Arrays.asList(rotationCompetency));
 
         List<MatchDTO> result = this.matchingService.getMatchingRotationsByApprentice(1);
 
         assertEquals(1, result.size());
-        assertEquals(3.0, result.getFirst().getMatchingScore());
+        assertEquals(3.0, result.get(0).getMatchingScore());
     }
 
     @Test
@@ -101,16 +103,16 @@ class MatchingServiceTest {
         CompetencyDTO lowWeightCompetency = new CompetencyDTO(1, "Backend entwickeln", "Applikationsentwicklung", "C1", null, 1.0);
         CompetencyDTO highWeightCompetency = new CompetencyDTO(1, "Backend entwickeln", "Applikationsentwicklung", "C1", null, 5.0);
 
-        when(this.apprenticeService.getApprenticeCompetencies(1)).thenReturn(List.of(openCompetency));
-        when(this.rotationService.getAvailableRotations()).thenReturn(List.of(lowScoreRotation, highScoreRotation));
-        when(this.competencyService.getCompetenciesByRotation(1)).thenReturn(List.of(lowWeightCompetency));
-        when(this.competencyService.getCompetenciesByRotation(2)).thenReturn(List.of(highWeightCompetency));
+        when(this.apprenticeService.getApprenticeCompetencies(1)).thenReturn(Arrays.asList(openCompetency));
+        when(this.rotationService.getAvailableRotations()).thenReturn(Arrays.asList(lowScoreRotation, highScoreRotation));
+        when(this.competencyService.getCompetenciesByRotation(1)).thenReturn(Arrays.asList(lowWeightCompetency));
+        when(this.competencyService.getCompetenciesByRotation(2)).thenReturn(Arrays.asList(highWeightCompetency));
 
         List<MatchDTO> result = this.matchingService.getMatchingRotationsByApprentice(1);
 
         assertEquals(2, result.size());
-        assertEquals(2, result.getFirst().getRotationId());
-        assertTrue(result.getFirst().getMatchingScore() > result.get(1).getMatchingScore());
+        assertEquals(2, result.get(0).getRotationId());
+        assertTrue(result.get(0).getMatchingScore() > result.get(1).getMatchingScore());
     }
 
     @Test
@@ -125,14 +127,14 @@ class MatchingServiceTest {
 
         RotationDTO rotationDTO = new RotationDTO(1, "Fullstack Rotation", "Backend, Datenbank und Schnittstellen", "IT", "Java, MariaDB, REST", "available", LocalDate.now());
 
-        when(this.apprenticeService.getApprenticeCompetencies(1)).thenReturn(List.of(doneCompetency, inProgressCompetency, openCompetency));
-        when(this.rotationService.getAvailableRotations()).thenReturn(List.of(rotationDTO));
-        when(this.competencyService.getCompetenciesByRotation(1)).thenReturn(List.of(rotationCompetencyOne, rotationCompetencyTwo, rotationCompetencyThree));
+        when(this.apprenticeService.getApprenticeCompetencies(1)).thenReturn(Arrays.asList(doneCompetency, inProgressCompetency, openCompetency));
+        when(this.rotationService.getAvailableRotations()).thenReturn(Arrays.asList(rotationDTO));
+        when(this.competencyService.getCompetenciesByRotation(1)).thenReturn(Arrays.asList(rotationCompetencyOne, rotationCompetencyTwo, rotationCompetencyThree));
 
         List<MatchDTO> result = this.matchingService.getMatchingRotationsByApprentice(1);
 
         assertEquals(1, result.size());
-        assertEquals(5.0, result.getFirst().getMatchingScore());
+        assertEquals(5.0, result.get(0).getMatchingScore());
     }
 
     @Test
@@ -141,20 +143,20 @@ class MatchingServiceTest {
         CompetencyDTO rotationCompetency = new CompetencyDTO(1, "Backend entwickeln", "Applikationsentwicklung", "C1", null, null);
         RotationDTO rotationDTO = new RotationDTO(1, "Backend Rotation", "Backend Entwicklung", "IT", "Java", "available", LocalDate.now());
 
-        when(this.apprenticeService.getApprenticeCompetencies(1)).thenReturn(List.of(apprenticeCompetency));
-        when(this.rotationService.getAvailableRotations()).thenReturn(List.of(rotationDTO));
-        when(this.competencyService.getCompetenciesByRotation(1)).thenReturn(List.of(rotationCompetency));
+        when(this.apprenticeService.getApprenticeCompetencies(1)).thenReturn(Arrays.asList(apprenticeCompetency));
+        when(this.rotationService.getAvailableRotations()).thenReturn(Arrays.asList(rotationDTO));
+        when(this.competencyService.getCompetenciesByRotation(1)).thenReturn(Arrays.asList(rotationCompetency));
 
         List<MatchDTO> result = this.matchingService.getMatchingRotationsByApprentice(1);
 
         assertEquals(1, result.size());
-        assertEquals(1.0, result.getFirst().getMatchingScore());
+        assertEquals(1.0, result.get(0).getMatchingScore());
     }
 
     @Test
     void shouldReturnEmptyListWhenNoRotationsAreAvailable() {
-        when(this.apprenticeService.getApprenticeCompetencies(1)).thenReturn(List.of());
-        when(this.rotationService.getAvailableRotations()).thenReturn(List.of());
+        when(this.apprenticeService.getApprenticeCompetencies(1)).thenReturn(Collections.emptyList());
+        when(this.rotationService.getAvailableRotations()).thenReturn(Collections.emptyList());
 
         List<MatchDTO> result = this.matchingService.getMatchingRotationsByApprentice(1);
 
@@ -165,14 +167,14 @@ class MatchingServiceTest {
     void shouldReturnScoreZeroWhenRotationHasNoCompetencies() {
         RotationDTO rotationDTO = new RotationDTO(1, "Leere Rotation", "Keine Kompetenzen zugeordnet", "IT", "Keine", "available", LocalDate.now());
 
-        when(this.apprenticeService.getApprenticeCompetencies(1)).thenReturn(List.of());
-        when(this.rotationService.getAvailableRotations()).thenReturn(List.of(rotationDTO));
-        when(this.competencyService.getCompetenciesByRotation(1)).thenReturn(List.of());
+        when(this.apprenticeService.getApprenticeCompetencies(1)).thenReturn(Collections.emptyList());
+        when(this.rotationService.getAvailableRotations()).thenReturn(Arrays.asList(rotationDTO));
+        when(this.competencyService.getCompetenciesByRotation(1)).thenReturn(Collections.emptyList());
 
         List<MatchDTO> result = this.matchingService.getMatchingRotationsByApprentice(1);
 
         assertEquals(1, result.size());
-        assertEquals(0.0, result.getFirst().getMatchingScore());
+        assertEquals(0.0, result.get(0).getMatchingScore());
     }
 
     @Test
@@ -180,17 +182,17 @@ class MatchingServiceTest {
         CompetencyDTO rotationCompetency = new CompetencyDTO(1, "Backend entwickeln", "Applikationsentwicklung", "C1", null, 2.0);
         RotationDTO rotationDTO = new RotationDTO(7, "Backend Rotation", "Backend Entwicklung", "IT Bildung", "Java, Spring Boot", "available", LocalDate.now());
 
-        when(this.apprenticeService.getApprenticeCompetencies(1)).thenReturn(List.of());
-        when(this.rotationService.getAvailableRotations()).thenReturn(List.of(rotationDTO));
-        when(this.competencyService.getCompetenciesByRotation(7)).thenReturn(List.of(rotationCompetency));
+        when(this.apprenticeService.getApprenticeCompetencies(1)).thenReturn(Collections.emptyList());
+        when(this.rotationService.getAvailableRotations()).thenReturn(Arrays.asList(rotationDTO));
+        when(this.competencyService.getCompetenciesByRotation(7)).thenReturn(Arrays.asList(rotationCompetency));
 
         List<MatchDTO> result = this.matchingService.getMatchingRotationsByApprentice(1);
 
         assertEquals(1, result.size());
-        assertEquals(7, result.getFirst().getRotationId());
-        assertEquals("Backend Rotation", result.getFirst().getRotationTitle());
-        assertEquals("IT Bildung", result.getFirst().getDepartment());
-        assertEquals("Java, Spring Boot", result.getFirst().getTechnologies());
-        assertEquals(2.0, result.getFirst().getMatchingScore());
+        assertEquals(7, result.get(0).getRotationId());
+        assertEquals("Backend Rotation", result.get(0).getRotationTitle());
+        assertEquals("IT Bildung", result.get(0).getDepartment());
+        assertEquals("Java, Spring Boot", result.get(0).getTechnologies());
+        assertEquals(2.0, result.get(0).getMatchingScore());
     }
 }
